--- a/public/assets/admin/css/soft-ui-dashboard.css
+++ b/public/assets/admin/css/soft-ui-dashboard.css
@@ -8116,7 +8116,7 @@ fieldset:disabled .btn {
   border-width: 5px !important
 }
 
-.w-0 {
+/* .w-0 {
   width: 0 !important
 }
 
@@ -8130,13 +8130,13 @@ fieldset:disabled .btn {
 
 .w-3 {
   width: 3% !important
-}
+} */
 
 /* .w-4 {
   width: 4%
 } */
 
-.w-5 {
+/* .w-5 {
   width: 5% !important
 }
 
@@ -8158,7 +8158,7 @@ fieldset:disabled .btn {
 
 .w-10 {
   width: 10% !important
-}
+} */
 
 .w-15 {
   width: 15% !important
