--- a/public/assets/admin/css/soft-ui-dashboard.css
+++ b/public/assets/admin/css/soft-ui-dashboard.css
@@ -2711,7 +2711,7 @@ progress {
 
 .form-control:disabled,
 .form-control[readonly] {
-  background-color: #e9ecef;
+  background-color: #f8f9fa;
   opacity: 1
 }
 
